Add web interface with Thymeleaf